ft(product): recommended products to a buyer
